# Python-Project-

./: Estimation of the frequency.py  README.md  TDSEcode.py  jg.txt  neet gui final final final copy.py  neet gui final final final.py  neet gui final final.py  pyproject.toml  requirements.txt  setup.cfg  test.py  testing2.txt
git_ignore/: Description of Folder
src/tdse/: Alex_GUI_code  Alex_GUI_code.py  Frequency.py  TDSE.py  TDSEf0.01.py  TDSEf0_01.py  emlyns initial copy paste+save all numerical values to list.py  psi.txt  save_psi.py
tests/: Estimation of the frequency.py  Frequency.py  test_example.py
