[metadata]
name = tdse
version = 0.0.2
author = Emlyn Davies
author_email = zhap062@live.rhul.ac.uk
description = A small example package
long_description = file: "README.md"
long_description_content_type = text/markdown
readme = "README.md"
url = https://github.com/jasleenkapoor/Python-Project-
project_urls =
    Bug Tracker = https://github.com/jasleenkapoor/Python-Project-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    add_one = example_package.command_line_interface:main
